--- a/Tweet_clustering.ipynb
+++ b/Tweet_clustering.ipynb
@@ -13,12 +13,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#CS 6375 Machine Learning\n",
-        "#Assignment 3\n",
+        "#Tweet_clustering using K-means clustering (Jaccard Distance)\n",
         "#Group members:\n",
-        "- Hasini Gammune-dvg190000\n",
+        "- Hasini Gammune\n",
         "\n",
-        "- Mahesh Ranpati Dewage-mkr200000"
+        "- Mahesh Ranpati Dewage"
       ],
       "metadata": {
         "id": "aCPMY5PWKr-C"
